--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "nuxt": "^3.13.0",
@@ -17,6 +18,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "sass": "^1.79.3",
     "sass-loader": "^16.0.2"
   }
