--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 8080",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "deploy": "gh-pages -d dist -t true"
   },
   "dependencies": {
+    "material-icons": "^1.13.12",
     "nuxt": "^3.13.0",
     "pdfjs-dist": "^4.7.76",
     "vue": "latest",
@@ -18,6 +19,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.4",
     "gh-pages": "^6.2.0",
     "sass": "^1.79.3",
     "sass-loader": "^16.0.2"
