--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist -t true"
   },
   "dependencies": {
+    "@nuxtjs/google-gtag": "^1.0.4",
     "material-icons": "^1.13.12",
     "nuxt": "^3.13.0",
     "pdfjs-dist": "^4.7.76",
