--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist -t true"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^7.2.10",
     "material-icons": "^1.13.12",
     "nuxt": "^3.13.0",
     "nuxt-gtag": "^3.0.2",
