--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -58,7 +58,7 @@ jobs:
           # target to static (https://nuxtjs.org/docs/configuration-glossary/configuration-target/).
           #
           # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: nuxt
+#          static_site_generator: nuxt
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -87,6 +87,16 @@ jobs:
         run: echo "NUXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NUXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}" >> $GITHUB_ENV
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+
+      - name: Debug Environment Variables Before Nuxt Build
+        run: |
+          echo "Verificando NUXT_PUBLIC_FIREBASE_API_KEY: ${NUXT_PUBLIC_FIREBASE_API_KEY:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${NUXT_PUBLIC_FIREBASE_AUTH_DOMAIN:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_PROJECT_ID: ${NUXT_PUBLIC_FIREBASE_PROJECT_ID:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_STORAGE_BUCKET: ${NUXT_PUBLIC_FIREBASE_STORAGE_BUCKET:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${NUXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_APP_ID: ${NUXT_PUBLIC_FIREBASE_APP_ID:+true}"
+          echo "Verificando NUXT_PUBLIC_FIREBASE_MEASUREMENT_ID: ${NUXT_PUBLIC_FIREBASE_MEASUREMENT_ID:+true}"
       - name: Static HTML export with Nuxt
         run: ${{ steps.detect-package-manager.outputs.manager }} run generate
         env:
@@ -100,7 +110,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+#          path: ./dist
+          path: ./.output/public
 
   # Deployment job
   deploy:
